Add number guessing game implementation, .gitignore, and IntelliJ IDEA project files