@@ -7,63 +7,117 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Random;
 import java.util.Scanner;
+import java.util.Set;
 
 public class Main {
 
-    static class IO {
-        static void print(String s) { System.out.print(s); }
-        static void println(String s) { System.out.println(s); }
-        static void println() { System.out.println(); }
+    static final class C {
+        static final String ESC = "\u001B[";
+        static final String RESET = ESC + "0m";
+        static final String BOLD = ESC + "1m";
+        static final String DIM = ESC + "2m";
+
+        static String fg256(int n) { return ESC + "38;5;" + n + "m"; }
+        static String bg256() { return ESC + "48;5;" + 236 + "m"; }
+
+        static final String TITLE = BOLD + fg256(51);
+        static final String ACCENT = BOLD + fg256(213);
+        static final String OK = BOLD + fg256(82);
+        static final String WARN = BOLD + fg256(214);
+        static final String BAD = BOLD + fg256(203);
+        static final String INFO = BOLD + fg256(117);
+        static final String MUTED = DIM + fg256(245);
+
+        static final String ARROW_UP = BOLD + fg256(82);
+        static final String ARROW_DOWN = BOLD + fg256(203);
+
+        static final String PANEL = bg256() + fg256(255);
+        static final String PANEL_EDGE = fg256(39);
+
+        static void clear() { System.out.print(ESC + "H" + ESC + "2J"); System.out.flush(); }
     }
 
-    static record Score(String nombre, int intentos, int maxIntentos, int minimo, int maximo) {}
+    record Score(String nombre, int intentos, int maxIntentos, int minimo, int maximo) {}
 
-    static final ArrayList<Score> scoreboard = new ArrayList<>();
+    static final ArrayList<Score> marcador = new ArrayList<>();
     static final Path SCORE_PATH = Paths.get("scoreboard.txt");
     static final int MAX_REGISTROS = 100;
 
-    public static void main(String[] args) {
+    static void main() {
         Random aleatorio = new Random();
-
-        cargarScoreboard();
+        cargarMarcador();
 
         try (Scanner entrada = new Scanner(System.in)) {
             while (true) {
-                IO.println("Juego: Adivina el numero.");
-                IO.println("Pista: ↑ SUBE (el secreto es mayor), ↓ BAJA (el secreto es menor).");
+                C.clear();
 
-                String nombre = leerLineaNoVacia(entrada, "Nombre: ");
-
-                int minimo = leerInt(entrada, "Minimo: ");
-                int maximo = leerInt(entrada, "Maximo: ");
-                while (minimo >= maximo) {
-                    IO.println("Rango invalido. El minimo debe ser menor que el maximo.");
-                    minimo = leerInt(entrada, "Minimo: ");
-                    maximo = leerInt(entrada, "Maximo: ");
-                }
-
-                Score resultado = jugarRonda(entrada, aleatorio, nombre, minimo, maximo);
-
-                if (resultado != null) {
-                    scoreboard.add(resultado);
-                    ordenarScoreboard();
-                    recortarScoreboard();
-                    guardarScoreboard();
-                    mostrarScoreboard();
-                } else {
-                    IO.println("Partida terminada. No se guardo en el scoreboard.");
-                }
-
-                String op = leerLineaNoVacia(entrada, "¿Jugar otra vez? (s/n): ");
-                if (!op.equalsIgnoreCase("s")) break;
-
+                IO.println(C.TITLE + "=== ADIVINA EL NÚMERO ===" + C.RESET);
+                IO.println(C.MUTED + "Pista: ↑ SUBE (el secreto es mayor), ↓ BAJA (el secreto es menor)." + C.RESET);
                 IO.println();
+                IO.println(C.PANEL_EDGE + "┌──────────────────────────────┐" + C.RESET);
+                IO.println(C.PANEL_EDGE + "│ " + C.RESET + C.PANEL + "1) Jugar                     " + C.RESET + C.PANEL_EDGE + "│" + C.RESET);
+                IO.println(C.PANEL_EDGE + "│ " + C.RESET + C.PANEL + "2) Ver marcador              " + C.RESET + C.PANEL_EDGE + "│" + C.RESET);
+                IO.println(C.PANEL_EDGE + "│ " + C.RESET + C.PANEL + "3) Ver estadísticas          " + C.RESET + C.PANEL_EDGE + "│" + C.RESET);
+                IO.println(C.PANEL_EDGE + "│ " + C.RESET + C.PANEL + "4) Salir                     " + C.RESET + C.PANEL_EDGE + "│" + C.RESET);
+                IO.println(C.PANEL_EDGE + "└──────────────────────────────┘" + C.RESET);
+                IO.println();
+
+                int op = leerIntRango(entrada, C.ACCENT + "Elige una opción (1-4): " + C.RESET);
+                IO.println();
+
+                switch (op) {
+                    case 1 -> jugar(entrada, aleatorio);
+                    case 2 -> { mostrarMarcador(); pausar(entrada); }
+                    case 3 -> { mostrarEstadisticas(); pausar(entrada); }
+                    case 4 -> { IO.println(C.INFO + "Hasta luego." + C.RESET); return; }
+                }
             }
         }
+    }
+
+    static void pausar(Scanner entrada) {
+        IO.println();
+        IO.print(C.MUTED + "Enter para continuar..." + C.RESET);
+        entrada.nextLine();
+    }
+
+    static void jugar(Scanner entrada, Random aleatorio) {
+        C.clear();
+        IO.println(C.TITLE + "=== NUEVA PARTIDA ===" + C.RESET);
+        IO.println();
+
+        String nombre = leerLineaNoVacia(entrada, C.ACCENT + "Nombre: " + C.RESET);
+
+        int minimo = leerInt(entrada, C.ACCENT + "Mínimo: " + C.RESET);
+        int maximo = leerInt(entrada, C.ACCENT + "Máximo: " + C.RESET);
+        while (minimo >= maximo) {
+            IO.println(C.BAD + "Rango inválido. El mínimo debe ser menor que el máximo." + C.RESET);
+            minimo = leerInt(entrada, C.ACCENT + "Mínimo: " + C.RESET);
+            maximo = leerInt(entrada, C.ACCENT + "Máximo: " + C.RESET);
+        }
+
+        Score resultado = jugarRonda(entrada, aleatorio, nombre, minimo, maximo);
+
+        if (resultado != null) {
+            marcador.add(resultado);
+            ordenarMarcador();
+            recortarMarcador();
+            guardarMarcador();
+            IO.println(C.OK + "Partida guardada en el marcador." + C.RESET);
+            IO.println();
+            mostrarMarcador();
+        } else {
+            IO.println(C.WARN + "Partida terminada. No se guardó en el marcador." + C.RESET);
+        }
+
+        pausar(entrada);
     }
 
     static Score jugarRonda(Scanner entrada, Random aleatorio, String nombre, int minimo, int maximo) {
@@ -80,25 +134,24 @@ public class Main {
 
         String sugerencia = "↑ SUBE / ↓ BAJA";
 
-        IO.println();
-        IO.println("Rango inicial: " + minimo + " a " + maximo);
-        IO.println("Intentos disponibles: " + maxIntentos);
-        imprimirRangoSugerido(minSugerido, maxSugerido);
+        //IO.println(C.INFO + "Rango inicial: " + minimo + " a " + maximo + C.RESET);
+        IO.println(C.INFO + "Intentos disponibles: " + maxIntentos + C.RESET);
+        //imprimirRangoSugerido(minSugerido, maxSugerido);
         IO.println();
 
         while (true) {
             if (intentos >= maxIntentos) {
-                IO.println("Se acabaron los intentos.");
-                IO.println("El numero era: " + secreto);
+                IO.println(C.BAD + "Se acabaron los intentos." + C.RESET);
+                IO.println(C.BAD + "El número era: " + secreto + C.RESET);
                 return null;
             }
 
-            IO.println("Intento " + (intentos + 1) + " de " + maxIntentos);
+            IO.println(C.ACCENT + "Intento " + (intentos + 1) + " de " + maxIntentos + C.RESET);
 
-            int numero = leerInt(entrada, "Numero (" + sugerencia + "): ");
+            int numero = leerInt(entrada, C.ACCENT + "Número (" + sugerencia + "): " + C.RESET);
 
             if (!insertarOrdenadoSinRepetir(historial, numero)) {
-                IO.println("Ese numero ya fue probado. Intenta otro.");
+                IO.println(C.WARN + "Ese número ya fue probado. Intenta otro." + C.RESET);
                 IO.println();
                 continue;
             }
@@ -106,9 +159,9 @@ public class Main {
             intentos++;
 
             if (numero == secreto) {
-                IO.println("Correcto.");
-                IO.println("Respuesta: " + secreto);
-                IO.println("Total de intentos: " + intentos);
+                IO.println(C.OK + "Correcto." + C.RESET);
+                IO.println(C.OK + "Respuesta: " + secreto + C.RESET);
+                IO.println(C.OK + "Total de intentos: " + intentos + C.RESET);
                 IO.println();
                 return new Score(nombre, intentos, maxIntentos, minimo, maximo);
             }
@@ -116,19 +169,19 @@ public class Main {
             boolean esMenorQueSecreto = numero < secreto;
             int diferencia = Math.abs(numero - secreto);
 
-            String flecha = esMenorQueSecreto ? "↑" : "↓";
-            String dir = esMenorQueSecreto ? "SUBE" : "BAJA";
+            String flecha = esMenorQueSecreto ? (C.ARROW_UP + "↑" + C.RESET) : (C.ARROW_DOWN + "↓" + C.RESET);
+            String dir = esMenorQueSecreto ? (C.ARROW_UP + "SUBE" + C.RESET) : (C.ARROW_DOWN + "BAJA" + C.RESET);
             String dist = pistaDistancia(diferencia, minimo, maximo);
 
-            IO.println("Pista: " + flecha + " " + dir + " | " + dist);
+            IO.println(C.INFO + "Pista: " + C.RESET + flecha + " " + dir + C.MUTED + " | " + dist + C.RESET);
 
             sugerencia = esMenorQueSecreto ? "↑ SUBE" : "↓ BAJA";
 
             if (esMenorQueSecreto) minSugerido = Math.max(minSugerido, numero + 1);
             else maxSugerido = Math.min(maxSugerido, numero - 1);
 
-            imprimirRangoSugerido(minSugerido, maxSugerido);
-            IO.println("Probados: " + historial);
+            //(minSugerido, maxSugerido);
+            IO.println(C.MUTED + "Probados: " + historial + C.RESET);
             IO.println();
         }
     }
@@ -139,7 +192,7 @@ public class Main {
 
         if (r <= 0.02) return "Muy cerca.";
         if (r <= 0.05) return "Cerca.";
-        if (r <= 0.10) return "Media distancia.";
+        if (r <= 0.10) return "A media distancia.";
         if (r <= 0.20) return "Lejos.";
         return "Muy lejos.";
     }
@@ -150,17 +203,17 @@ public class Main {
         return (int) Math.ceil(v) + 1;
     }
 
-    static void imprimirRangoSugerido(int minActual, int maxActual) {
+    /*static void imprimirRangoSugerido(int minActual, int maxActual) {
         if (minActual > maxActual) {
-            IO.println("Rango sugerido: (sin opciones).");
+            IO.println(C.WARN + "Rango sugerido: (sin opciones)." + C.RESET);
             return;
         }
         if (minActual == maxActual) {
-            IO.println("Rango sugerido: solo queda " + minActual + ".");
+            IO.println(C.INFO + "Rango sugerido: " + C.OK + "solo queda " + minActual + C.RESET + C.INFO + "." + C.RESET);
             return;
         }
-        IO.println("Rango sugerido: " + minActual + " a " + maxActual + ".");
-    }
+        IO.println(C.INFO + "Rango sugerido: " + minActual + " a " + maxActual + "." + C.RESET);
+    }*/
 
     static int leerInt(Scanner entrada, String texto) {
         while (true) {
@@ -171,7 +224,15 @@ public class Main {
                 return v;
             }
             entrada.nextLine();
-            IO.println("Entrada invalida. Escribe un numero entero.");
+            IO.println(C.BAD + "Entrada inválida. Escribe un número entero." + C.RESET);
+        }
+    }
+
+    static int leerIntRango(Scanner entrada, String texto) {
+        while (true) {
+            int v = leerInt(entrada, texto);
+            if (v >= 1 && v <= 4) return v;
+            IO.println(C.BAD + "Opción inválida." + C.RESET);
         }
     }
 
@@ -180,7 +241,7 @@ public class Main {
             IO.print(texto);
             String s = entrada.nextLine();
             if (!s.trim().isEmpty()) return s.trim();
-            IO.println("Entrada invalida.");
+            IO.println(C.BAD + "Entrada inválida." + C.RESET);
         }
     }
 
@@ -202,21 +263,19 @@ public class Main {
         return s.intentos() / (double) base;
     }
 
-    static void ordenarScoreboard() {
-        scoreboard.sort(
+    static void ordenarMarcador() {
+        marcador.sort(
                 Comparator.comparingDouble(Main::eficiencia)
                         .thenComparingInt(Score::intentos)
                         .thenComparingInt(s -> -((s.maximo() - s.minimo()) + 1))
         );
     }
 
-    static void recortarScoreboard() {
-        while (scoreboard.size() > MAX_REGISTROS) {
-            scoreboard.remove(scoreboard.size() - 1);
-        }
+    static void recortarMarcador() {
+        while (marcador.size() > MAX_REGISTROS) marcador.removeLast();
     }
 
-    static void cargarScoreboard() {
+    static void cargarMarcador() {
         if (!Files.exists(SCORE_PATH)) return;
 
         try {
@@ -235,7 +294,7 @@ public class Main {
                     int minimo = Integer.parseInt(p[3].trim());
                     int maximo = Integer.parseInt(p[4].trim());
                     if (!nombre.isEmpty() && intentos > 0 && minimo < maximo) {
-                        scoreboard.add(new Score(nombre, intentos, maxIntentos, minimo, maximo));
+                        marcador.add(new Score(nombre, intentos, maxIntentos, minimo, maximo));
                     }
                 } else if (p.length == 4) {
                     String nombre = p[0].trim();
@@ -243,23 +302,23 @@ public class Main {
                     int minimo = Integer.parseInt(p[2].trim());
                     int maximo = Integer.parseInt(p[3].trim());
                     if (!nombre.isEmpty() && intentos > 0 && minimo < maximo) {
-                        scoreboard.add(new Score(nombre, intentos, 0, minimo, maximo));
+                        marcador.add(new Score(nombre, intentos, 0, minimo, maximo));
                     }
                 }
             }
-            ordenarScoreboard();
-            recortarScoreboard();
+            ordenarMarcador();
+            recortarMarcador();
         } catch (IOException | NumberFormatException e) {
-            IO.println("No se pudo leer el scoreboard.");
+            IO.println(C.BAD + "No se pudo leer el marcador." + C.RESET);
         }
     }
 
-    static void guardarScoreboard() {
-        ordenarScoreboard();
-        recortarScoreboard();
+    static void guardarMarcador() {
+        ordenarMarcador();
+        recortarMarcador();
 
         ArrayList<String> lineas = new ArrayList<>();
-        for (Score s : scoreboard) {
+        for (Score s : marcador) {
             lineas.add(s.nombre() + "|" + s.intentos() + "|" + s.maxIntentos() + "|" + s.minimo() + "|" + s.maximo());
         }
 
@@ -273,22 +332,155 @@ public class Main {
                     StandardOpenOption.WRITE
             );
         } catch (IOException e) {
-            IO.println("No se pudo guardar el scoreboard.");
+            IO.println(C.BAD + "No se pudo guardar el marcador." + C.RESET);
         }
     }
 
-    static void mostrarScoreboard() {
-        IO.println("--- SCOREBOARD (Top 5) ---");
-        int limite = Math.min(5, scoreboard.size());
+    static void mostrarMarcador() {
+        ordenarMarcador();
+
+        IO.println(C.TITLE + "=== MARCADOR (Top " + 5 + ") ===" + C.RESET);
+        int limite = Math.min(5, marcador.size());
+
         for (int i = 0; i < limite; i++) {
-            Score s = scoreboard.get(i);
+            Score s = marcador.get(i);
             int rango = (s.maximo() - s.minimo()) + 1;
             String intentosTxt = (s.maxIntentos() > 0) ? (s.intentos() + "/" + s.maxIntentos()) : String.valueOf(s.intentos());
-            String efTxt = String.format(Locale.ROOT, "%.2f", eficiencia(s));
-            System.out.printf("%d) %s | intentos %s | rango %d | eficiencia %s%n",
-                    i + 1, s.nombre(), intentosTxt, rango, efTxt);
+            String efTxt = String.format(Locale.ROOT, "%.3f", eficiencia(s));
+
+            String medal = (i == 0) ? (C.BOLD + C.fg256(220) + "★" + C.RESET)
+                    : (i == 1) ? (C.BOLD + C.fg256(250) + "★" + C.RESET)
+                    : (i == 2) ? (C.BOLD + C.fg256(208) + "★" + C.RESET)
+                    : " ";
+
+            System.out.printf(Locale.ROOT,
+                    "%s %s%d)%s %s | %sintentos%s %s | %srango%s %d (%d..%d) | %seficiencia%s %s%n",
+                    medal,
+                    C.ACCENT, i + 1, C.RESET,
+                    C.INFO + s.nombre() + C.RESET,
+                    C.MUTED, C.RESET, C.OK + intentosTxt + C.RESET,
+                    C.MUTED, C.RESET, rango, s.minimo(), s.maximo(),
+                    C.MUTED, C.RESET, C.ACCENT + efTxt + C.RESET
+            );
         }
-        IO.println("---------------------------");
-        IO.println("Guardado en: " + SCORE_PATH.toAbsolutePath());
+
+        if (marcador.isEmpty()) IO.println(C.WARN + "(vacío)" + C.RESET);
+
+        IO.println(C.MUTED + "Archivo: " + SCORE_PATH.toAbsolutePath() + C.RESET);
+    }
+
+    static void mostrarEstadisticas() {
+        ordenarMarcador();
+
+        IO.println(C.TITLE + "=== ESTADÍSTICAS ===" + C.RESET);
+
+        int n = marcador.size();
+        IO.println(C.INFO + "Registros guardados: " + C.RESET + C.ACCENT + n + C.RESET);
+        if (n == 0) return;
+
+        Set<String> jugadores = new HashSet<>();
+        for (Score s : marcador) jugadores.add(s.nombre());
+        IO.println(C.INFO + "Jugadores únicos: " + C.RESET + C.ACCENT + jugadores.size() + C.RESET);
+
+        ArrayList<Integer> intentosList = new ArrayList<>();
+        for (Score s : marcador) intentosList.add(s.intentos());
+        Collections.sort(intentosList);
+
+        int minIntentos = intentosList.getFirst();
+        int maxIntentos = intentosList.getLast();
+        double promIntentos = promedioInt(intentosList);
+        double medianaIntentos = medianaInt(intentosList);
+        double desvIntentos = desviacionEstandarInt(intentosList, promIntentos);
+
+        IO.println(C.INFO + "Intentos (mín..máx): " + C.RESET + C.ACCENT + minIntentos + C.RESET + C.MUTED + " .. " + C.RESET + C.ACCENT + maxIntentos + C.RESET);
+        IO.println(String.format(Locale.ROOT, "%sIntentos (promedio): %s%.2f%s", C.INFO, C.ACCENT, promIntentos, C.RESET));
+        IO.println(String.format(Locale.ROOT, "%sIntentos (mediana): %s%.2f%s", C.INFO, C.ACCENT, medianaIntentos, C.RESET));
+        IO.println(String.format(Locale.ROOT, "%sIntentos (desv. estándar): %s%.2f%s", C.INFO, C.ACCENT, desvIntentos, C.RESET));
+
+        double minEf = Double.POSITIVE_INFINITY, maxEf = Double.NEGATIVE_INFINITY, sumEf = 0.0;
+        for (Score s : marcador) {
+            double ef = eficiencia(s);
+            minEf = Math.min(minEf, ef);
+            maxEf = Math.max(maxEf, ef);
+            sumEf += ef;
+        }
+
+        IO.println(String.format(Locale.ROOT, "%sEficiencia (mín..máx): %s%.3f%s%s .. %s%.3f%s",
+                C.INFO, C.ACCENT, minEf, C.RESET, C.MUTED, C.ACCENT, maxEf, C.RESET));
+        IO.println(String.format(Locale.ROOT, "%sEficiencia (promedio): %s%.3f%s", C.INFO, C.ACCENT, (sumEf / n), C.RESET));
+
+        Score mejor = marcador.getFirst();
+        Score peor = marcador.getLast();
+
+        IO.println();
+        IO.println(C.OK + "Mejor partida:" + C.RESET);
+        imprimirDetalleScore(mejor);
+
+        IO.println(C.BAD + "Peor partida:" + C.RESET);
+        imprimirDetalleScore(peor);
+
+        Map<Integer, Integer> freqRango = new HashMap<>();
+        for (Score s : marcador) {
+            int rango = (s.maximo() - s.minimo()) + 1;
+            freqRango.put(rango, freqRango.getOrDefault(rango, 0) + 1);
+        }
+
+        IO.println();
+        IO.println(C.INFO + "Rangos más usados (Top 10):" + C.RESET);
+        imprimirTopMapa(freqRango);
+
+        Map<String, Integer> partidasPorJugador = new HashMap<>();
+        for (Score s : marcador) partidasPorJugador.put(s.nombre(), partidasPorJugador.getOrDefault(s.nombre(), 0) + 1);
+
+        IO.println();
+        IO.println(C.INFO + "Jugadores con más partidas (Top 10):" + C.RESET);
+        imprimirTopMapa(partidasPorJugador);
+    }
+
+    static void imprimirDetalleScore(Score s) {
+        int rango = (s.maximo() - s.minimo()) + 1;
+        String intentosTxt = (s.maxIntentos() > 0) ? (s.intentos() + "/" + s.maxIntentos()) : String.valueOf(s.intentos());
+        System.out.printf(Locale.ROOT,
+                "%s- %sJugador:%s %s | %sIntentos:%s %s | %sRango:%s %d (%d..%d) | %sEficiencia:%s %.3f%s%n",
+                C.MUTED,
+                C.INFO, C.RESET, C.ACCENT + s.nombre() + C.RESET,
+                C.INFO, C.RESET, C.ACCENT + intentosTxt + C.RESET,
+                C.INFO, C.RESET, rango, s.minimo(), s.maximo(),
+                C.INFO, C.RESET, eficiencia(s),
+                C.RESET
+        );
+    }
+
+    static void imprimirTopMapa(Map<?, Integer> mapa) {
+        ArrayList<Map.Entry<?, Integer>> entries = new ArrayList<>(mapa.entrySet());
+        entries.sort((e1, e2) -> Integer.compare(e2.getValue(), e1.getValue()));
+        int lim = Math.min(10, entries.size());
+        for (int i = 0; i < lim; i++) {
+            var e = entries.get(i);
+            System.out.println(C.ACCENT + (i + 1) + ")" + C.RESET + " " + C.INFO + e.getKey() + C.RESET + C.MUTED + " -> " + C.RESET + C.OK + e.getValue() + C.RESET);
+        }
+        if (entries.isEmpty()) System.out.println(C.WARN + "(sin datos)" + C.RESET);
+    }
+
+    static double promedioInt(List<Integer> xs) {
+        long sum = 0;
+        for (int v : xs) sum += v;
+        return sum / (double) xs.size();
+    }
+
+    static double medianaInt(List<Integer> xsOrdenada) {
+        int n = xsOrdenada.size();
+        if (n % 2 == 1) return xsOrdenada.get(n / 2);
+        return (xsOrdenada.get(n / 2 - 1) + xsOrdenada.get(n / 2)) / 2.0;
+    }
+
+    static double desviacionEstandarInt(List<Integer> xs, double media) {
+        if (xs.size() <= 1) return 0.0;
+        double sum = 0.0;
+        for (int v : xs) {
+            double d = v - media;
+            sum += d * d;
+        }
+        return Math.sqrt(sum / xs.size());
     }
 }
